--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="lighterGreen">#72e5b6</color>
     <color name="babyGreen">#ccffc6</color>
     <color name="darkOrange">#ffa734</color>
+    <color name="red">#ff3232</color>
     <color name="lightOrange">#ffcd5e</color>
     <color name="button_color">#ffa734</color>
     <color name="transparent">#000000</color>
