--- a/app/src/main/res/layout/fragment_diet_list.xml
+++ b/app/src/main/res/layout/fragment_diet_list.xml
@@ -9,19 +9,42 @@
     tools:context=".ui.diets.DietsFragment"
     tools:listitem="@layout/diet_item">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/dietRecycler"
-        android:name="com.example.quecomohoy.ui.preferences.DietsFragment"
+    <RadioGroup
+        android:id="@+id/group"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/saveDietButton"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/saveDietButton"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="20dp"
-        app:layoutManager="LinearLayoutManager"
-        tools:listitem="@layout/diet_item">
-    </androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintWidth_percent="0.9">
+
+        <RadioButton
+            android:id="@+id/omnivore"
+            style="@style/RadioButton"
+            android:text="@string/omnivore" />
+
+        <RadioButton
+            android:id="@+id/vegetarian"
+            style="@style/RadioButton"
+            android:text="@string/vegetarian" />
+
+        <RadioButton
+            android:id="@+id/vegan"
+            style="@style/RadioButton"
+            android:text="@string/vegan" />
+
+        <RadioButton
+            android:id="@+id/pescetarian"
+            style="@style/RadioButton"
+            android:text="@string/pescetarian" />
+
+        <RadioButton
+            android:id="@+id/other"
+            style="@style/RadioButton"
+            android:text="@string/other" />
+    </RadioGroup>
 
     <Button
         android:id="@+id/saveDietButton"
