fix/use-camera-image-on-ingredients-scan

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -99,6 +99,9 @@
         <action
             android:id="@+id/action_imageFragment_to_searchFragment"
             app:destination="@id/searchFragment" />
+        <action
+            android:id="@+id/action_imageFragment_to_scanIngredientsFragment"
+            app:destination="@id/scanIngredientsFragment" />
     </fragment>
     <fragment
         android:id="@+id/askPermissionFragment"
