--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -70,6 +70,9 @@
         <action
             android:id="@+id/action_profileFragment_to_preferencesFragment"
             app:destination="@id/dieteFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_userIngredientsFragment"
+            app:destination="@id/userIngredientsFragment" />
     </fragment>
     <fragment
         android:id="@+id/dieteFragment"
@@ -136,4 +139,9 @@
             android:id="@+id/action_scanIngredientsFragment_to_cameraFragment"
             app:destination="@id/cameraFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/userIngredientsFragment"
+        android:name="com.example.quecomohoy.ui.profile.UserIngredientsFragment"
+        android:label="UserIngredientsFragment"
+        tools:layout="@layout/fragment_user_ingredients" />
 </navigation>
