--- a/app/src/main/res/layout/fragment_scan_ingredients.xml
+++ b/app/src/main/res/layout/fragment_scan_ingredients.xml
@@ -69,6 +69,7 @@
         android:id="@+id/emptyResultsLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/selected_image"
         android:layout_centerVertical="true"
         android:text="@string/no_scan_results"
         android:visibility="visible"
