--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -11,7 +11,8 @@
         android:id="@+id/viewFinder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-    />
+        tools:layout_editor_absoluteX="30dp"
+        tools:layout_editor_absoluteY="311dp" />
 
     <ImageButton
         android:layout_marginBottom="50dp"
