--- a/app/src/main/res/layout/fragment_scan_ingredients.xml
+++ b/app/src/main/res/layout/fragment_scan_ingredients.xml
@@ -17,10 +17,22 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:gravity="center"
+        android:layout_marginTop="45px"
         android:text="Selecciona o escanea un ingrediente"
-        android:textSize="20sp"
+        android:textSize="23sp"
         android:textStyle="bold" />
-
+    <TextView
+        android:gravity="center"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:id="@+id/instructions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/selected_image"
+        android:layout_centerVertical="true"
+        android:text="@string/scan_to_start"
+        android:textSize="14sp"
+        tools:layout_centerHorizontal="true" />
     <ImageView
         android:id="@+id/selected_image"
         android:layout_width="wrap_content"
@@ -76,7 +88,9 @@
         tools:listitem="@layout/recipes_item" />
 
     <TextView
-        android:layout_marginBottom="40dp"
+        android:visibility="gone"
+        android:padding="20dp"
+        android:gravity="center"
         android:layout_above="@id/buttonsLinearLayout"
         android:id="@+id/emptyResultsLabel"
         android:layout_width="wrap_content"
@@ -84,8 +98,6 @@
         android:layout_below="@id/selected_image"
         android:layout_centerVertical="true"
         android:text="@string/no_scan_results"
-        android:textSize="18sp"
-        android:visibility="visible"
-        tools:layout_centerHorizontal="true"
-        tools:visibility="visible" />
+        android:textSize="13sp"
+        tools:layout_centerHorizontal="true" />
 </RelativeLayout>
